full functionality nearly finished app

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-    font-size: 3rem;
-    background-color: $dark-blue;
+    font-size: 2rem;
+    background-color: $background;
     color:white;
     font-family: 'Montserrat', sans-serif;
 }
