--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,6 +6,18 @@ $blue: #3c4251;
 $light-blue: #464b5e;
 $purple: #8357c5;
 
+$jet: #363635ff;
+$ebony: #595a4aff;
+$green-yellow: #b0fe76ff;
+$light-green: #81e979ff;
+$cambridge-blue: #8fbb99ff;
+$gray: #5B5B5B;
+
+$background: $jet;
+$dark-accent: $ebony;
+$main-color: $green-yellow;
+$light-accent: $light-green;
+
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
