--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,8 @@
 @import './components/options';
 @import './components/password';
 @import './components/stats';
+@import './components/range';
+@import './components/header';
 
 
 
