changes: reponsive, added warnings, prevent submit

--- a/src/styles/components/_password.scss
+++ b/src/styles/components/_password.scss
@@ -1,10 +1,11 @@
 ._password_container {
-    width: 450px;
-    height: 120px;
+    max-width: 450px;
+    max-height: 120px;
     border-radius: 20px;
     
     background: $dark-accent;
     display: flex;
+    flex-direction: row;
     margin: 0 auto;
     
 }
@@ -21,9 +22,11 @@
 }
 
 ._password_password {
+    display: flex;
+    
     padding: 10px 10px 10px 20px;
-    width: 381px;
-    height: 110px;
+    width: 380px;
+    height: 86px;
     overflow: hidden;
     word-break: break-all;
     -webkit-user-select: all;
@@ -31,11 +34,25 @@
     -ms-user-select: all;
     user-select: all;    
     box-sizing: border-box;
-    line-height: 2.5rem;
 
+}
+
+.top {
+    align-items: start;
+}
+
+.center {
+    align-items: center;
 }
 
 ._password_button {
     background: none;
     border:none;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    ._password_container {
+        flex-direction: row;
+
+    }
 }
