--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,9 +5,19 @@ html {
 body {
     font-size: 2rem;
     background-color: $background;
-    color:white;
+    color: $font-color;
     font-family: 'Montserrat', sans-serif;
 }
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:visited {
+    color: white;
+}
+
+
 .password {
     font-family: 'Roboto Mono', monospace;
 }
