--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,5 @@
 // colors
-$off-black: #20222b;
-$off-white: #a5afd7;
-$dark-blue: #333745;
-$blue: #3c4251;
-$light-blue: #464b5e;
-$purple: #8357c5;
+$font-color: white;
 
 $jet: #363635ff;
 $ebony: #595a4aff;
@@ -17,6 +12,7 @@ $background: $jet;
 $dark-accent: $ebony;
 $main-color: $green-yellow;
 $light-accent: $light-green;
+
 
 // Spacing
 $s-size: 1.2rem;
