--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,10 +1,33 @@
 .header h1 {
     font-weight: 400;
     font-style: normal;
-    margin: 20px 30px;
+    margin: 0;
+    font-size: 3rem;
+    
+}
+
+.header a {
+    font-size: 3rem;
 }
 
 .header {
+    height: 100px;
     display:flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .header h1 {
+        margin: 0 30px;
+        font-size: 4rem;
+    }
+    .header {
+        align-items: center;
+        justify-content: start;
+    }
+        
 }
