--- a/src/styles/components/_options.scss
+++ b/src/styles/components/_options.scss
@@ -1,16 +1,16 @@
 
 
-._options_form {
+._options_form > div {
     display:grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: 40px 40px;
+    // grid-template-rows: 40px 40px;
 
     align-items: center;
 }
 ._options_form {
     margin: 10px 0px;
 }
-._options_form label {
+ label._options_pool, label._options_length {
     grid-column: 1;
     text-align: right;
     padding-right: 20px;
@@ -23,6 +23,7 @@
 ._options_length.value {
     display:flex;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .length-text {
@@ -36,7 +37,7 @@
 }
 
 input.length-range {
-    width: 300px;
+    width: 60%;
 }
 
 
@@ -44,17 +45,24 @@ input.length-range {
     margin-bottom: 20px 0;
 }
 
+.checkboxes {
+    display:flex;
+    flex-wrap: wrap;
+    align-items: start;
+}
 ._options_label-checkbox {
     border-radius: 10px;
-    padding: 2px;
-    margin: 5px;
-    padding-right: 0;
-    // display:flex;
-    // align-items: center;
-    // justify-content: center;
-    // flex-direction: ;
-    
+    margin: 3px;
+    padding: 3px;
+    width: 50px;
+    text-align: center;
 }
+
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  }
 
 ._options_label-checkbox:hover {
     cursor: pointer;
@@ -71,6 +79,20 @@ input.length-range {
     color: white;
 }
 
+._options_label-checkbox.all-unselected {
+    background-color: lighten(red, 30%);
+    color: black;
+}
+
 ._options_input-checkbox {
     visibility: hidden;
+    width: 0;
+    height: 0;
 }
+
+@media (min-width: $desktop-breakpoint) {
+    input.length-range {
+        width: 300px;
+    }
+}
+
