--- a/src/styles/components/_range.scss
+++ b/src/styles/components/_range.scss
@@ -4,6 +4,7 @@
 // Version 1.5.3
 // MIT License
 
+@use 'sass:math';
 
 $track-color: #eceff1 !default;
 $thumb-color: $main-color !default;
@@ -56,7 +57,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
     appearance: none;
   -webkit-appearance: none;
   background: transparent;
-//   margin: math.div($thumb-height, 2) 0;
+  // margin: math.div($thumb-height, 2) 0;
   width: $track-width;
 
   &::-moz-focus-outer {
@@ -90,7 +91,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
   &::-webkit-slider-thumb {
     @include thumb;
     -webkit-appearance: none;
-    // margin-top: (math.div((-$track-border-width * 2 + $track-height), 2) - math.div($thumb-height, 2));
+    margin-top: (math.div((-$track-border-width * 2 + $track-height), 2) - math.div($thumb-height, 2));
   }
 
   &::-moz-range-track {
@@ -99,7 +100,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
     background: $track-color;
     border: $track-border-width solid $track-border-color;
     border-radius: $track-radius;
-    // height: math.div($track-height, 2);
+    height: math.div($track-height, 2);
   }
 
   &::-moz-range-thumb {
@@ -110,7 +111,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
     @include track;
     background: transparent;
     border-color: transparent;
-    // border-width: math.div($thumb-height, 2) 0;
+    border-width: math.div($thumb-height, 2) 0;
     color: transparent;
   }
 
@@ -130,7 +131,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
 
   &::-ms-thumb {
     @include thumb;
-    // margin-top: math.div($track-height, 4);
+    margin-top: math.div($track-height, 4);
   }
 
   &:disabled {
