--- a/src/styles/components/_password.scss
+++ b/src/styles/components/_password.scss
@@ -51,7 +51,7 @@
 }
 
 @media (min-width: $desktop-breakpoint) {
-    ._password_container {
+    ._password_button-container {
         flex-direction: row;
 
     }
