added color highlight for different character types

--- a/src/styles/components/_password.scss
+++ b/src/styles/components/_password.scss
@@ -23,7 +23,7 @@
 
 ._password_password {
     display: flex;
-    
+    flex-wrap: wrap;
     padding: 10px 10px 10px 20px;
     width: 380px;
     height: 86px;
@@ -35,6 +35,27 @@
     user-select: all;    
     box-sizing: border-box;
 
+}
+
+._password_span {
+    margin: 0;
+    padding: 0;
+}
+
+._password_span.uppercase {
+    color: lightgray; 
+}
+
+._password_span.lowercase {
+    color: $font-color; 
+}
+
+._password_span.num {
+    color: $light-green;
+}
+
+._password_span.special {
+    color: red;
 }
 
 .top {
